[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/paddle.gd" type="Script" id=1]
[ext_resource path="res://sprites/bat_shadow.png" type="Texture" id=2]
[ext_resource path="res://sprites/bat.png" type="Texture" id=3]
[ext_resource path="res://sprites/bat_large.png" type="Texture" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 8 )

[node name="paddle" type="KinematicBody2D"]
scale = Vector2( 2, 2 )
script = ExtResource( 1 )
speed = 200

[node name="paddle_shadow_sprite" type="Sprite" parent="."]
position = Vector2( 4, 4 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="paddle_sprite" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
frames = SubResource( 1 )

[node name="paddle_collider" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="paddle_tween" type="Tween" parent="."]
